@@ -1,6 +1,6 @@
 Package: Gmisc
 Version: 0.6.2.1
-Date: 2014-02-28
+Date: 2014-03-01
 Title: A few plots, tables, and misc functions
 Author: Max Gordon <max@gforge.se>
 Maintainer: Max Gordon <max@gforge.se>
