@@ -1,0 +1,16 @@
+\name{prGetTextGrobCex}
+\alias{prGetTextGrobCex}
+\title{Just a simple acces to the gp$cex parameter}
+\usage{
+prGetTextGrobCex(x)
+}
+\arguments{
+  \item{x}{The text-grob of interest}
+}
+\value{
+\code{numeric} The cex value, 1 if no cex was present
+}
+\description{
+Just a simple acces to the gp$cex parameter
+}
+
