@@ -6,6 +6,7 @@ Changes for 0.6.2.1
 * Added visual tests and debugged the bezierArrowGradient/transitionPlots
 * Externalized all internal functions of the transitionplot
 * Added proportions for the transitionplot
+* Managed thanks to Baptiste Auguié help on Stack Overflow I know now how to calculate the height of axisGrobs - useful both in the forestplot2 and the transitionPlot functions
 
 Changes for 0.6.2.0
 -------------------
